--- a/paginas/loadingpage/index.html
+++ b/paginas/loadingpage/index.html
@@ -6,7 +6,7 @@
   <title>RIOFER Loading page</title>
   <link rel="stylesheet" href="carregamento.css">
 </head>
-<body>
+<body class="body-loading-page">
   <div class="loader">
     <div class="square">R</div>
     <div class="square">I</div>
