--- a/paginas/treinamento/modulos/modulosDetalhe.html
+++ b/paginas/treinamento/modulos/modulosDetalhe.html
@@ -11,16 +11,16 @@
     <header>
         <div class="icon-exit">
             <a id="logout" href="/paginas/treinamento/treinamento.html">
-                <img src="../home/images-home/icon-exit.7bfce337.svg"  alt="icon-exit">
+                <img src="/paginas/home/images-home/icon-exit.7bfce337.svg"  alt="icon-exit">
                 Voltar
             </a>
         </div>
     </header>
     <article id="Training-Box">
         <header class=" image-curso">
-            <h2 id="curso-titulo"></h2> 
-            <p id="curso-descricao"></p>
         <img id="curso-imagem" src=""alt="">
+        <h2 id="curso-titulo"></h2> 
+        <p style="text-transform: uppercase;" id="curso-descricao"></p>
     </header>
     <div class="texts-modules"> 
         <h3>Módulos do Curso</h3>
