--- a/paginas/treinamento/cadastro/cadastroTreinamento.html
+++ b/paginas/treinamento/cadastro/cadastroTreinamento.html
@@ -14,7 +14,7 @@
     <header>
         <div class="icon-exit">
             <a id="logout" href="/paginas/treinamento/treinamento.html">
-                <img src="../home/images-home/icon-exit.7bfce337.svg" alt="icon-exit">
+                <img src="/paginas/home/images-home/icon-exit.7bfce337.svg" alt="icon-exit">
                 Voltar
             </a>
         </div>
