--- a/paginas/loadingpage/index.html
+++ b/paginas/loadingpage/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RIOFER Loading page</title>
   <link rel="stylesheet" href="carregamento.css">
+  <link rel="stylesheet" href="/colors.css">
 </head>
 <body class="body-loading-page">
   <div class="loader">
