--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/paginas/home/home.css">
+    <link rel="stylesheet" href="/colors.css">
     <a  href="https://icons8.com/icon/59864/mais"></a><a href="https://icons8.com"></a>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -75,6 +76,30 @@
             <p class="paragraph-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae soluta culpa nisi unde doloremque explicabo maiores ratione similique suscipit tempora deserunt, rerum, possimus expedita totam libero dolorum commodi temporibus eos Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis .!</p>
         </div>
       </section>
+
+
+      <main>
+
+        <div class="carrossel">
+            <img class="imagem ativa" src="/images-index/e43a4d128c9a9560294a5da3b6814bef.jpg" alt="militar">
+
+            <img class="imagem" src="/images-index/maxresdefault.jpg" alt="anime">
+
+            <img class="imagem" src="/images-index/uma empresa com 1725d143-f4df-492f-a720-e8980f76416c.png" alt="dagrao">
+        </div>
+
+                <div class="botoes-carrossel">
+                    <button class="botao selecionado" id="botao1"></button>
+                    <button class="botao"></button>
+                    <button class="botao"></button>
+                    
+            </div>
+        </div>
+    </main>
+
+
+
+
 
       <main>
         <h1>Eventos</h1>
