--- a/paginas/treinamento/cadastro/cadastroTreinamento.html
+++ b/paginas/treinamento/cadastro/cadastroTreinamento.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./cadastroTreinamento.css">
+    <link rel="stylesheet" href="/colors.css">
     <title>Cadastrar Novo Curso</title>
 </head>
 <body>
