--- a/paginas/chamados/chamados.html
+++ b/paginas/chamados/chamados.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>riofer.com.br</title>
     <link rel="stylesheet" href="/paginas/chamados/chamados.css">
+    <link rel="stylesheet" href="/colors.css">
 </head>
 <body>
 
