--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -47,6 +47,8 @@
                     <img src="images-home/menu_book_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg" alt="icon-community">
                     Cadastros
                 </a>                                
+                     
+                <span></span>
 
                 <a class="icon-menu" onclick=showSidebar() href="#"><img src="images-home/menu_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg" alt="icon-menu"></a>
             </nav>
@@ -90,11 +92,12 @@
       <main>
 
         <div class="carrossel">
-            <img class="imagem ativa" src="/images-index/e43a4d128c9a9560294a5da3b6814bef.jpg" alt="militar">
+            <img class="imagem ativa" src="/paginas/home/images-home/Cópia de RH - TREINAMENTO.jpg" alt="militar">
 
-            <img class="imagem" src="/images-index/maxresdefault.jpg" alt="anime">
+            <img class="imagem" src="/paginas/home/images-home/7.jpg" alt="anime">
 
-            <img class="imagem" src="/images-index/uma empresa com 1725d143-f4df-492f-a720-e8980f76416c.png" alt="dagrao">
+
+            <img class="imagem" src="/paginas/home/images-home/8.jpg" alt="dagrao">
         </div>
 
                 <div class="botoes-carrossel">
