--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -64,6 +64,10 @@
 
                 <a onclick=hideSidebar() href="#"><img src="images-home/close_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg" alt="icon-close"></a>
 
+                <a id="logout" href="/index.html">
+                    < Desconectar
+                </a>
+                
                 <a href="../treinamento/treinamento.html">
                    
                     Treinamento
@@ -84,7 +88,7 @@
       <section class="section-welcome">
         <div id="user-info" class="user-info"></div>
             <div class="texts-welcome">
-                <p class="paragraph-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae soluta culpa nisi unde doloremque explicabo maiores ratione similique suscipit tempora deserunt, rerum, possimus expedita totam libero dolorum commodi temporibus eos Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis .!</p>
+                <p class="paragraph-text">BEM VINDO AO PORTAL INTERNO DA RIOFER.!</p>
             </div>
       </section>
 
@@ -92,12 +96,12 @@
       <main>
 
         <div class="carrossel">
-            <img class="imagem ativa" src="/paginas/home/images-home/Cópia de RH - TREINAMENTO.jpg" alt="militar">
+            <img class="imagem ativa" src="/paginas/home/images-home/8.jpg" alt="militar">
 
             <img class="imagem" src="/paginas/home/images-home/7.jpg" alt="anime">
 
 
-            <img class="imagem" src="/paginas/home/images-home/8.jpg" alt="dagrao">
+            <img class="imagem" src="/paginas/home/images-home/12.jpg" alt="dagrao">
         </div>
 
                 <div class="botoes-carrossel">
